Add splash screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">TouristMap</string>
+    <string name="app_name">Tourist Map</string>
+    <string name="app_environment">Environment:</string>
 </resources>
