Add Home Detail Activity

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -8,4 +8,10 @@
     <string name="home_title">Explora y descubre,\ndesde Casa!</string>
     <string name="home_search">Buscar lugares turísticos</string>
     <string name="home_list">Lista de lugares turísticos</string>
+
+    <!-- Home Detail -->
+    <string name="home_detail_description">DESCRIPCIÓN</string>
+    <string name="home_detail_attractions">ATRACCIONES</string>
+    <string name="home_detail_attractions_format">%1$s, %2$s, %3$s, %4$s</string>
+    <string name="home_detail_go_to_map">IR AL MAPA</string>
 </resources>
